--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,21 +12,8 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">Services</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-            </ul>
+        <div class="nav navbar-nav navbar-right" id="nav-cta">
+            <button type="button" class="btn btn-default navbar-btn">Sign in</button>
         </div>
         <!-- /.navbar-collapse -->
     </div>
