Added Nav Macros

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,12 +8,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">${custom_nav_logo}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="nav navbar-nav navbar-right" id="nav-cta">
-            <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+            <button type="button" class="btn btn-default navbar-btn">${custom_nav_cta}</button>
         </div>
         <!-- /.navbar-collapse -->
     </div>
