--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>${custom_banner_headline}</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>${custom_banner_content}</p>
+            <a href="${custome_banner_cta_link}" class="btn btn-primary btn-xl page-scroll">${custom_banner_cta}</a>
         </div>
     </div>
 </header>
