--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -68,7 +68,9 @@ aside {
 }
 
 // Navigation
-
+#nav-cta {
+    padding-right: 15px;
+}
 .navbar-default {
     background-color: white;
     border-color: rgba($theme-dark, .5);
