--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,14 +3,14 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="${custom_hover_1_img}" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_1_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_1_content}
                             </div>
                         </div>
                     </div>
@@ -18,14 +18,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_2_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_3_content}
                             </div>
                         </div>
                     </div>
@@ -37,10 +37,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_3_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_3_content}
                             </div>
                         </div>
                     </div>
@@ -52,10 +52,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_4_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_4_content}
                             </div>
                         </div>
                     </div>
@@ -67,10 +67,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_5_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_5_content}
                             </div>
                         </div>
                     </div>
@@ -82,10 +82,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ${custom_hover_6_headline}
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ${custom_hover_6_content}
                             </div>
                         </div>
                     </div>
