Fix Banner Button Macros

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>${custom_banner_headline}</h1>
             <hr>
             <p>${custom_banner_content}</p>
-            <a href="${custome_banner_cta_link}" class="btn btn-primary btn-xl page-scroll">${custom_banner_cta}</a>
+            <a href="${custom_banner_cta_button_link}" class="btn btn-primary btn-xl page-scroll">${custom_banner_cta_button}</a>
         </div>
     </div>
 </header>
