--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header style="background-image:url('${custom_banner_background}');">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>${custom_banner_headline}</h1>
