--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -157,7 +157,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    // background-image: url('../img/header.jpg');
     text-align: center;
     color: white;
     .header-content {
@@ -350,4 +350,3 @@ img::-moz-selection {
 body {
     -webkit-tap-highlight-color: $theme-dark;
 }
-
